# com.webos.service.memorymanager

./: CMakeLists.txt  README.md  screenlog.0
files/activity/: activity-com.webos.service.memorymanager.foreground.json.in
files/conf/: memorymanager.json.in
files/dbus/: MemoryManager1.xml
files/launch/: memorymanager.conf.in  memorymanager.service.in
files/sysbus/: com.webos.service.memorymanager.api.json  com.webos.service.memorymanager.groups.json.in  com.webos.service.memorymanager.perm.json  com.webos.service.memorymanager.role.json.in  com.webos.service.memorymanager.service.in
src/: Environment.h.in
src/common/util/: Cgroup.cpp  Cgroup.h  Docker.cpp  Docker.h  Fifo.cpp  Fifo.h  FileLock.cpp  FileLock.h  JValueUtil.cpp  JValueUtil.h  LSMessageUtil.cpp  LSMessageUtil.h  LinuxProcess.cpp  LinuxProcess.h  Logger.cpp  Logger.h  Proc.cpp  Proc.h  Time.cpp  Time.h
src/memorymanager/: CMakeLists.txt  Main.cpp  MemoryManager.cpp  MemoryManager.h
src/memorymanager/base/: Application.cpp  Application.h  Process.cpp  Process.h  RunningList.cpp  RunningList.h  Runtime.cpp  Runtime.h
src/memorymanager/interface/: IClassName.h  IInitializable.h  IListener.h  IManager.h  IPrintable.h  ISerializable.h  ISingleton.h  ISingleton_legacy.h
src/memorymanager/luna/: LunaManager.cpp  LunaManager.h
src/memorymanager/luna/client/: AbsClient.hpp  ApplicationManager.cpp  ApplicationManager.h  NotificationManager.cpp  NotificationManager.h  SAM.cpp  SAM.h  SessionManager.cpp  SessionManager.h
src/memorymanager/luna/service/: NewHandle.cpp  NewHandle.h  OldHandle.cpp  OldHandle.h
src/memorymanager/luna2/: LunaConnector.cpp  LunaConnector.h
src/memorymanager/memoryinfo/: MemoryInfoManager.cpp  MemoryInfoManager.h
src/memorymanager/memorymonitor/: MemoryMonitor.cpp  MemoryMonitor.h
src/memorymanager/sam/: SAM.cpp  SAM.h
src/memorymanager/session/: Session.cpp  Session.h
src/memorymanager/setting/: SettingManager.cpp  SettingManager.h
src/memorymanager/swap/: SwapManager.cpp  SwapManager.h
src/memorymanager/sysinfo/: SysInfo.cpp  SysInfo.h
src/memstay/: CMakeLists.txt  Main.cpp  MemStay.cpp  MemStay.h
